build-output.txt

> Configure project :
The 'sonarqube' task depends on compile tasks. This behavior is now deprecated and will be removed in version 5.x. To avoid implicit compilation, set property 'sonar.gradle.skipCompile' to 'true' and make sure your project is compiled, before analysis has started.
The 'sonar' task depends on compile tasks. This behavior is now deprecated and will be removed in version 5.x. To avoid implicit compilation, set property 'sonar.gradle.skipCompile' to 'true' and make sure your project is compiled, before analysis has started.
WARNING: A terminally deprecated method in sun.misc.Unsafe has been called
WARNING: sun.misc.Unsafe::objectFieldOffset has been called by lombok.permit.Permit
WARNING: Please consider reporting this to the maintainers of class lombok.permit.Permit
WARNING: sun.misc.Unsafe::objectFieldOffset will be removed in a future release

> Task :compileJava
E:\workspace\claude\trademaster\broker-auth-service\src\main\java\com\trademaster\brokerauth\security\JwtRequestFilter.java:117: error: cannot find symbol
            Claims claims = Jwts.parserBuilder()
                                ^
  symbol:   method parserBuilder()
  location: class Jwts
E:\workspace\claude\trademaster\broker-auth-service\src\main\java\com\trademaster\brokerauth\service\BrokerAuthenticationService.java:78: error: no suitable constructor found for BrokerSession(<null>,String,String,BrokerType,String,String,SessionStatus,LocalDateTime,LocalDateTime,LocalDateTime,LocalDateTime,<null>)
        return new BrokerSession(
               ^
    constructor BrokerSession.BrokerSession() is not applicable
      (actual and formal argument lists differ in length)
    constructor BrokerSession.BrokerSession(Long,String,String,BrokerType,String,String,SessionStatus,LocalDateTime,LocalDateTime,LocalDateTime,LocalDateTime,String,String) is not applicable
      (actual and formal argument lists differ in length)
E:\workspace\claude\trademaster\broker-auth-service\src\main\java\com\trademaster\brokerauth\controller\InternalBrokerAuthController.java:408: error: cannot find symbol
        return refreshService.refreshSession(sessionId, request.refreshToken());
               ^
  symbol:   variable refreshService
  location: class InternalBrokerAuthController
E:\workspace\claude\trademaster\broker-auth-service\src\main\java\com\trademaster\brokerauth\service\BrokerCredentialService.java:60: error: cannot find symbol
            .thenCompose(sessionOpt -> sessionOpt
            ^
  symbol:   method thenCompose((sessionOp[...]y())))
  location: class Optional<BrokerSession>
E:\workspace\claude\trademaster\broker-auth-service\src\main\java\com\trademaster\brokerauth\service\BrokerCredentialService.java:80: error: cannot find symbol
            .thenApply(sessionOpt -> sessionOpt
            ^
  symbol:   method thenApply((sessionOp[...]alse))
  location: class Optional<BrokerSession>
Note: E:\workspace\claude\trademaster\broker-auth-service\src\main\java\com\trademaster\brokerauth\config\HttpClientConfig.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some input files use preview features of Java SE 24.
Note: Recompile with -Xlint:preview for details.
5 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///E:/workspace/claude/trademaster/broker-auth-service/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  E:\workspace\claude\trademaster\broker-auth-service\src\main\java\com\trademaster\brokerauth\security\JwtRequestFilter.java:117: error: cannot find symbol
              Claims claims = Jwts.parserBuilder()
                                  ^
    symbol:   method parserBuilder()
    location: class Jwts
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 29s
1 actionable task: 1 executed
